add tests, github action, add user patch and info endpoints
