# internal/v1/user/main.go
@@ -3,13 +3,21 @@ package user
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/kzdv/api/internal/v1/router"
+	"github.com/kzdv/api/pkg/gin/middleware/auth"
+	"github.com/kzdv/api/pkg/logger"
 )
+
+var log = logger.Logger.WithField("component", "user")
 
 func init() {
 	router.AddGroup("/user", routes)
 }
 
 func routes(router *gin.RouterGroup) {
-	router.GET("/login", GetLogin)
-	router.GET("/login/callback", GetLoginCallback)
+	router.GET("/login", getLogin)
+	router.GET("/login/callback", getLoginCallback)
+
+	router.GET("/", auth.NotGuest, getUser)
+	router.PATCH("/", auth.NotGuest, patchUser)
+	router.PATCH("/:cid", auth.NotGuest, patchUser)
 }
